--- a/blocks/related-articles/package.json
+++ b/blocks/related-articles/package.json
@@ -10,11 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-react": "^7.0.0",
-    "@frontkom/g-editor": "^0.4.0",
-    "babel-eslint": "^10.0.1",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "babel-loader": "^8.0.5",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
     "eslint": "^5.12.0",
